added example how to write an agent with asm