@@ -10,6 +10,25 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <includes>
+            <include>Test*</include>
+          </includes>
+          <argLine>
+            -Djdk.attach.allowAttachSelf=true
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.ow2.asm</groupId>
@@ -20,6 +39,12 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>5.8.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.ea.agentloader</groupId>
+      <artifactId>ea-agent-loader</artifactId>
+      <version>1.0.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
